--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 body {
     background-color: #CBC3E3;
+    color: #BF40BF;
+    font-size: 25px;
+}
+.purple-font{
+    color: #5D3FD3; 
+}
+#id {
+    color:rgb(155, 124, 255)
+}
+.head{
+    text-align: center;
+    margin-top: 50px;
+    background-color: #E6E6FA;
+    border: 3px solid #5D3FD3;
+    padding: 50px 25px;
 }
