--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-size: 25px;
     background-image: url(https://i.pinimg.com/originals/65/83/5c/65835c6e2b1fc030e9cc1193ccece6d2.webp);
     padding: 5px 5px;
-    font-family: 'Bonheur Royale', cursive;
+    font-family: 'Gluten', cursive;
 }
 .purple-font{
     color: rgb(155, 124, 255); 
@@ -17,10 +17,26 @@ body {
     margin-top: 50px;
     background-color: #E6E6FA;
     border: 3px solid rgb(155, 124, 255);
-    padding: 50px 25px;
+    padding: 25px 25px;
+}
+.center{
+    text-align: center;
 }
 .blogpost{
-    margin: auto;
+    height: 50%;
+    width: 25%;
     background: rgb(155, 124, 255);
-    width: 66%;
+    border: 3px solid rgb(155, 124, 255);
+    padding: 25px 25px;
+    margin: 15px;
+    display: block;
+    margin: 15 auto;
+}
+.post-1{
+
+}
+.post-2{
+
+}
+.post-3{
 }
