--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@ body {
 }
 .head{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 25px;
     background-color: #E6E6FA;
     border: 3px solid rgb(155, 124, 255);
     padding: 25px 25px;
+    border-radius: 30px;
 }
 .center{
     text-align: center;
@@ -33,3 +34,12 @@ body {
     display: block;
     margin: 15 auto;
 }
+
+.post-1{
+
+}
+
+.post-2{
+    padding: 5px 5px;
+}
+
