--- a/style.css
+++ b/style.css
@@ -24,22 +24,16 @@ body {
     text-align: center;
 }
 .blogpost{
-    height: 75%;
+    height: 50%;
     width: 40%;
     background: rgb(155, 124, 255);
     border-radius: 30px;
-    border: 3px solid rgb(155, 124, 255);
+    border: 3px solid #5d3fd3;
     padding: 15px 15px;
     margin: 15px;
     display: block;
     margin: 15 auto;
 }
 
-.post-1{
-
-}
-
 .post-2{
-    padding: 5px 5px;
 }
-
